# model3d-gl-wasm-example

./: Cargo.toml  gltf_viewer.js  index.html  run.html
src/: base_shader.rs  inner.rs  lib.rs  model.rs  objects.rs  shader.rs
