[package]
authors = ["Gavin J Stark"]
categories = ["wasm"]
description = "A very simple canvas WebGL program"
edition = "2021"
name = "canvas_webgl"
readme = "README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = ">=0.2.74"
js-sys = ">=0.3.64"

[dependencies.model3d-base]
version = "0.1"
path = "../model3d-rs"

[dependencies.model3d-gl]
version = "0.1"
path = "../model3d-gl"

[dependencies.web-sys]
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'EventTarget',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
version = ">=0.3.40"

[profile.release]
lto = true
opt-level = 3