[package]
authors = ["Gavin J Stark"]
categories = ["wasm"]
description = "A very simple canvas WebGL program"
edition = "2021"
name = "canvas_webgl"
readme = "README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
geo-nd       = "0.5"
serde_json = "1.0.117"

[dependencies.image]
version = "0.25"
default-features = false
features = ["jpeg", "png"]

[dependencies.model3d-base]
version = ">=0.3"
path = "../model3d-base"

[dependencies.model3d-gl]
version = "0.1"
path = "../model3d-gl"
features = ["webgl"]

[dependencies.model3d-gltf]
version = "0.0.1"
path = "../model3d-gltf"

[dependencies.wasm-bindgen]
version = ">=0.2.74"

[dependencies.js-sys]
version = ">=0.3.64"

[dependencies.web-sys]
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'EventTarget',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
version = ">=0.3.69"

[dependencies.console_error_panic_hook]
version = "0.1"

[profile.release]
debug = true
# lto = true
# opt-level = 3