[package]
name = "mod3d-gl-wasm-example"
version = "0.1.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
# categories.workspace = true
categories = ["wasm"]
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
geo-nd.workspace = true
indent-display.workspace = true
mod3d-base.workspace = true

base64.workspace = true
serde_json.workspace = true
anyhow.workspace = true
image.workspace = true
clap.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
console_error_panic_hook.workspace = true

[dependencies.mod3d-gltf]
workspace = true
features = ["serde", "serde_json"]

[dependencies.mod3d-gl]
workspace = true
features = ["webgl"]

[profile.release]
debug = true
# lto = true
# opt-level = 3